// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`MedalOverview snapshots should match snapshot with medals 1`] = `
<section
  class="animate-slide-up-1 max-w-[720px] mx-auto mt-7 px-6"
>
  <div
    class="relative overflow-hidden rounded-2xl p-7"
    style="background: linear-gradient(135deg, rgba(255,102,0,0.08), rgba(255,60,0,0.03)); border: 1px solid rgba(255, 102, 0, 0.15);"
  >
    <div
      class="shimmer-top absolute top-0 left-0 right-0 h-0.5"
    />
    <div
      class="flex items-center justify-between flex-wrap gap-5"
    >
      <div
        class="flex gap-6"
      >
        <div
          class="flex flex-col items-center gap-2"
        >
          <button
            aria-label="Vier gouden medaille"
            class="medal-ring-button medal-ring-wrapper"
            type="button"
          >
            <div
              class="medal-ring w-20 h-20 rounded-full flex items-center justify-center text-[32px] font-extrabold cursor-default"
              style="background: linear-gradient(145deg, #FFD700, #FFA500); box-shadow: 0 4px 20px rgba(255,215,0,0.35); color: rgb(26, 18, 0); font-family: "Outfit", "DM Sans", system-ui, sans-serif;"
            >
              3
            </div>
          </button>
          <span
            class="text-xs font-semibold text-white/50 uppercase tracking-[1.5px]"
          >
            Goud
          </span>
        </div>
        <div
          class="flex flex-col items-center gap-2"
        >
          <div
            class="medal-ring-wrapper"
          >
            <div
              class="medal-ring w-20 h-20 rounded-full flex items-center justify-center text-[32px] font-extrabold cursor-default"
              style="background: linear-gradient(145deg, #E8E8E8, #A8A8A8); box-shadow: 0 4px 20px rgba(200,200,200,0.3); color: rgb(26, 26, 26); font-family: "Outfit", "DM Sans", system-ui, sans-serif;"
            >
              2
            </div>
          </div>
          <span
            class="text-xs font-semibold text-white/50 uppercase tracking-[1.5px]"
          >
            Zilver
          </span>
        </div>
        <div
          class="flex flex-col items-center gap-2"
        >
          <div
            class="medal-ring-wrapper"
          >
            <div
              class="medal-ring w-20 h-20 rounded-full flex items-center justify-center text-[32px] font-extrabold cursor-default"
              style="background: linear-gradient(145deg, #CD7F32, #8B5A2B); box-shadow: 0 4px 20px rgba(205,127,50,0.3); color: rgb(255, 255, 255); font-family: "Outfit", "DM Sans", system-ui, sans-serif;"
            >
              1
            </div>
          </div>
          <span
            class="text-xs font-semibold text-white/50 uppercase tracking-[1.5px]"
          >
            Brons
          </span>
        </div>
      </div>
      <div
        class="text-right"
      >
        <div
          class="text-[44px] font-extrabold text-oranje leading-none"
          style="font-family: "Outfit", "DM Sans", system-ui, sans-serif;"
        >
          6
        </div>
        <div
          class="text-xs text-white/40 font-semibold uppercase tracking-wider"
        >
          Totaal medailles
        </div>
        <button
          class="mt-2 text-xs text-white/50 font-medium underline decoration-white/20 underline-offset-[3px] hover:text-oranje transition-colors"
        >
          Bekijk medaillespiegel ↓
        </button>
      </div>
    </div>
  </div>
</section>
`;

exports[`MedalOverview snapshots should match snapshot with zero medals state 1`] = `
<section
  class="animate-slide-up-1 max-w-[720px] mx-auto mt-7 px-6"
>
  <div
    class="relative overflow-hidden rounded-2xl p-7"
    style="background: linear-gradient(135deg, rgba(255,102,0,0.08), rgba(255,60,0,0.03)); border: 1px solid rgba(255, 102, 0, 0.15);"
  >
    <div
      class="shimmer-top absolute top-0 left-0 right-0 h-0.5"
    />
    <div
      class="flex items-center justify-between flex-wrap gap-5"
    >
      <div
        class="flex gap-6"
      >
        <div
          class="flex flex-col items-center gap-2"
        >
          <button
            aria-label="Vier gouden medaille"
            class="medal-ring-button medal-ring-wrapper"
            type="button"
          >
            <div
              class="medal-ring w-20 h-20 rounded-full flex items-center justify-center text-[32px] font-extrabold cursor-default"
              style="background: linear-gradient(145deg, #FFD700, #FFA500); box-shadow: 0 4px 20px rgba(255,215,0,0.35); color: rgb(26, 18, 0); font-family: "Outfit", "DM Sans", system-ui, sans-serif;"
            >
              0
            </div>
          </button>
          <span
            class="text-xs font-semibold text-white/50 uppercase tracking-[1.5px]"
          >
            Goud
          </span>
        </div>
        <div
          class="flex flex-col items-center gap-2"
        >
          <div
            class="medal-ring-wrapper"
          >
            <div
              class="medal-ring w-20 h-20 rounded-full flex items-center justify-center text-[32px] font-extrabold cursor-default"
              style="background: linear-gradient(145deg, #E8E8E8, #A8A8A8); box-shadow: 0 4px 20px rgba(200,200,200,0.3); color: rgb(26, 26, 26); font-family: "Outfit", "DM Sans", system-ui, sans-serif;"
            >
              0
            </div>
          </div>
          <span
            class="text-xs font-semibold text-white/50 uppercase tracking-[1.5px]"
          >
            Zilver
          </span>
        </div>
        <div
          class="flex flex-col items-center gap-2"
        >
          <div
            class="medal-ring-wrapper"
          >
            <div
              class="medal-ring w-20 h-20 rounded-full flex items-center justify-center text-[32px] font-extrabold cursor-default"
              style="background: linear-gradient(145deg, #CD7F32, #8B5A2B); box-shadow: 0 4px 20px rgba(205,127,50,0.3); color: rgb(255, 255, 255); font-family: "Outfit", "DM Sans", system-ui, sans-serif;"
            >
              0
            </div>
          </div>
          <span
            class="text-xs font-semibold text-white/50 uppercase tracking-[1.5px]"
          >
            Brons
          </span>
        </div>
      </div>
      <div
        class="text-right"
      >
        <div
          class="text-[44px] font-extrabold text-oranje leading-none"
          style="font-family: "Outfit", "DM Sans", system-ui, sans-serif;"
        >
          0
        </div>
        <div
          class="text-xs text-white/40 font-semibold uppercase tracking-wider"
        >
          Totaal medailles
        </div>
        <button
          class="mt-2 text-xs text-white/50 font-medium underline decoration-white/20 underline-offset-[3px] hover:text-oranje transition-colors"
        >
          Bekijk medaillespiegel ↓
        </button>
      </div>
    </div>
    <div
      class="mt-5 p-3 rounded-xl text-[13px] text-white/50 leading-relaxed"
      style="background: rgba(255, 255, 255, 0.04); border-left: 3px solid rgba(255, 102, 0, 0.3);"
    >
      🏁 De schaatsevementen zijn begonnen — De eerste grote kans voor Nederland op medailles! Houd de updates in de gaten.
    </div>
  </div>
</section>
`;
